# AndroidShellProject

./: .gitignore  README.md  graduation.md
Protector-Tool/: build.sh
Protector-Tool/src/com/shell/protector/: DexEncryptor.java  Main.java  ManifestEditor.java
Shell-Frontend/: app.js  index.html  login.html
Shell-Web-Server/: .env.example  auth.py  database.py  init_db.py  main.py  requirements.txt  task_manager.py
Shell-Web-Server/utils/: shell.jks  shell_wrapper.py
Stub-App/: build.sh  build_native.sh
Stub-App/app/src/main/cpp/: CMakeLists.txt  anti_debug.cpp  anti_debug.h  guard.cpp
Stub-App/src/com/shell/stub/: ProxyApplication.java
Stub-App/src/com/shell/stub/utils/: RefInvoke.java
